--- a/composeApp/src/androidMain/res/xml/file_paths.xml
+++ b/composeApp/src/androidMain/res/xml/file_paths.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths xmlns:android="http://schemas.android.com/apk/res/android">
     <cache-path name="shared_apk" path="apk_updates/" />
+    <cache-path name="shared_files" path="shared_files/" />
+    <external-files-path name="external_files" path="." />
+    <!-- Or -->
+    <files-path name="internal_files" path="." />
 </paths>
